app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 */

@font-face {
	font-family:"HogwartsWizard";
	src:
		font-url("HogwartsWizard.eot?") format("eot"),
		font-url("HogwartsWizard.woff") format("woff"), 
		font-url("HogwartsWizard.ttf") format("truetype"), 
		font-url("HogwartsWizard.svg#HogwartsWizard") format("svg");
	font-weight: normal;
	font-style: normal;
}

/*@font-face {
    font-family: 'HogwartsWizard';
    src: font-url('harrp____2-webfont.eot');
    src: font-url('harrp____2-webfont.eot?#iefix') format('embedded-opentype'),
         font-url('harrp____2-webfont.woff2') format('woff2'),
         font-url('harrp____2-webfont.woff') format('woff'),
         font-url('harrp____2-webfont.ttf') format('truetype'),
         font-url('harrp____2-webfont.svg#harry_potterregular') format('svg');
    font-weight: bold;
    font-style: normal;
}*/

body {
 	font-family: 'HogwartsWizard';
 	font-size: 20px;
/* 	overflow-x: hidden; 
 	background: url("http://res.cloudinary.com/howler/image/upload/v1462462665/WWoHP-Diagon-Alley_vz7qlu.jpg") no-repeat center center fixed;;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;*/
 }

 .wrapper {
 	height: 100%;
 	width: 100%;
 	opacity: 0.7;
 	position: fixed;
 	-webkit-filter: grayscale(60%);
 }

 .business-error-banner {
 	display: flex;
 	align-items: center;
 	flex-direction: column;
 	background-color: rgba(0, 0, 0, 0.63);
 	color: white;
 }

 .wrapper img {
 	height: 100%;
 	width: 100%;
 	position: fixed;
 }

.content-body {
	position: absolute;
	display: flex;
	justify-content: center;
	font-family: 'HogwartsWizard';
	margin: 40px 0;
	width: 100%;
	border-radius: 5px;
}

.nav-bar {
 	display: flex;
 	justify-content: space-between;
 	position: fixed;
 	overflow: hidden;
 	align-items: center;
 	background-color: #333;
 	height: 7.5%;
 	width: 100%;
 	z-index: 1000;
}

.splash {
	display: flex;
	flex-direction: column;
	align-items: center;
	overflow: none;
	position: fixed;
	left: 0;
	right: 0;
	top: 40%;
}

.welcome-text{
	font-size: 70px
}

.welcome-button {
	font-size: 30px;
}

.search {
	display: flex;
	align-items: center;
	font-size: 20px;
	width: 50%;

}
.search-bar {
	position: relative;
	padding: 3px;
	width: 67%;
}

.search-button {
	margin: 0;
}

input {
 	margin: 10px;
 	padding: 3px;
 	border: 1px solid #333;
 	border-radius: 3px;
 	height: 25px;
 	font-size: 18px;
 	font-family: 'HogwartsWizard';
}

.businesses {
	top: 40px;
	margin: 20px;
	overflow: hidden;
	width: 67%;
	font-family: 'HogwartsWizard';
/*	background-color:rgba(255,0,0,0.5);
*/}

.business-index {
	display: flex;
	flex-direction: column;
	align-items: center;
/*	background-color: rgba(243, 243, 243, 0.76);*/
}

.business-index-item {
	display: flex;
 	border: 1px solid rgba(0, 0, 0, 0.05);
 	align-items: center;
 	padding: 5px;
 	margin: 3.5px;
 	width: 95%;
 	height: 90%;
 	color: black;
 	background-color: white;
 	box-shadow: 5px 5px 5px #515151;
/* 	background: url("http://vignette3.wikia.nocookie.net/harrypotter/images/c/c8/Parchment_bg.jpg/revision/latest?cb=20091120152245");
*/ 	
	text-shadow: rgba(0,0,0,.15);
 	border-radius: 5px;
}

.business-index-item:hover {
	transform: scale(1.03);
  -webkit-transition: all 0.2s;
}
.business-index-text {

}

.business-index-image {
	display: flex;
	align-items: center;
	width: 150px;
	margin: 3px;
}

.business-index-image img {
	max-width: 100%;
	height: auto;
	border-radius: 5px;
}

.business-index-title {
 	font-size: 28px;
 	padding: 0 4px 0 4px;
}

.business-index-hours {
 	font-size: 20px;
 	color: darkgrey;
 	padding: 0 4px 0 4px;
}

.business-index-price {
 	font-size: 20px;
 	padding: 0 4px 0 4px;
} 

.business-index-address {
 	font-size: 20px;
 	padding: 0 4px;
}

.not-loggedin {
	display: flex;
	flex-direction: row;
	justify-content: flex-start;
}

.business-detail {
	display: flex;
	flex-direction: column;
	top: 40px;
	margin: 20px 0;
	width: 65%;
	color:white;
}

.business-detail-feature-bar {
/*	display: flex;
	align-items: flex-end;*/
	position: relative;
	border: 1px solid rgba(0, 0, 0, 0.05);
	margin: 10px 0;
	width: 100%;
	height: 300px;
	background-position: center;
/*	-webkit-filter: blur(5px);
  -moz-filter: blur(5px);
  -o-filter: blur(5px);
  -ms-filter: blur(5px);
  filter: blur(5px);*/
}

.business-detail-image {
	width: 100%;
	height: 100%;
	box-shadow: 15px 10px 20px #3A3A3A;
}

.business-detail-img img:hover {

}

.business-detail-image img {
	object-fit: cover;
	position: absolute;
	width: 100%;
	height: 100%;
	border-radius: 5px;
	/*-webkit-filter: blur(1px);*/
	-webkit-filter: brightness(50%);
	opacity: 1;
}
.business-detail-feature-text {
	display: flex;
	flex-direction: column;
	position: absolute;
	top: 0px;
	padding: 20px;
}

.business-detail-title {
	font-size: 50px;
}

.business-detail-address {
	font-size: 30px;
}

.business-detail-hours {
	font-size: 30px;
}

.business-detail-price {
	font-size: 30px;
}

.reviews {
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: column;
}

.review-index {
	display: flex;
	justify-content: center;
	flex-direction: column;
	align-items: center;
	width: 67%;
	color: black;
}

.review-index-item {
	display: flex;
	flex-direction: column;
	margin: 3px;
	padding: 3px;
	/*border: 1px solid #F8F9F9;*/
	background-color: white;
	/*background: url("http://res.cloudinary.com/howler/image/upload/v1462470060/parchment_nhcima.jpg");*/
	border-radius: 3px;
	width: 100%;
	box-shadow: 5px 5px 5px #6C6C6C
}

.fa-star::before {
	font-size: 20px;
}

.fa-star-o::before {
	font-size: 20px;
}

.review-username {
	font-weight: bold;
	padding: 5px 2px;
}

.review-body {
	padding: 5px;
}

.review-form {
	display: flex;
	align-items: baseline;
	flex-direction: column;
	height: 200px;
	width: 100%;
}

.review-form textarea {
	height: 100%;
	width: 100%;
	font-size: 18px;
}

.review-form-and-button {
	display:flex;
	align-items: center;
	justify-content: center;
	width: 100%;
}

/*.review-button {

}*/
.review-form-body {
	border: 1px solid black;
	font-size: 18px
}

.photos {
	display: flex;
	flex-direction: column;
	margin: 10px;
	top: 100px;
}

.photo-index {
	display: flex;
	flex-direction: row;
	justify-content: center;
	overflow-x:scroll;
	background-color: rgba(0, 0, 0, 0.2);
	box-shadow: 5px 5px 5px #6C6C6C
}

.photo-index-item {
	display: flex;
	align-items: center;
	justify-content: center;
	height: 150px;
	margin: 3px;
}

.photo-index-item img{
	max-height: 100%;
	width: auto;
	border-radius: 5px;
}

.rating-form {
	display: flex;
	border: 1px black;
}

::-webkit-scrollbar { 
    display: none; 
}
/*.starRating:not(old){
  display        : inline-block;
  width          : 7.5em;
  height         : 1.5em;
  overflow       : hidden;
  vertical-align : bottom;
}

.starRating:not(old) > input{
  margin-right : -100%;
  opacity      : 0;
}

.starRating:not(old) > label{
  display         : block;
  float           : right;
  position        : relative;
  background      : url("http://res.cloudinary.com/howler/image/upload/v1462437827/star-off_pek7ec.svg");
  background-size : contain;
}

.starRating:not(old) > label:before{
  content         : '';
  display         : block;
  width           : 1.5em;
  height          : 1.5em;
  background      : url("http://res.cloudinary.com/howler/image/upload/v1462437827/star-on_dfelti.svg");
  background-size : contain;
  opacity         : 0;
  transition      : opacity 0.2s linear;
}

.starRating:not(old) > label:hover:before,
.starRating:not(old) > label:hover ~ label:before,
.starRating:not(:hover) > :checked ~ label:before{
  opacity : 1;
}*/

/*.empty-star {
	height: 10px;
	width: 10px;
	background-color: grey
}

.full-star {
	height: 10px;
	width: 10px;
	background-color: green
}*/

button {
	font-family: 'HogwartsWizard';
	font-size: 20px;
	color: white;
/*	text-transform: uppercase;
*/	padding: 5px;
	margin: 10px;
/*	height: 31px;*/
	background-color: rgba(0, 0, 0, 0.63);
	border: 2px solid white;
	border-radius: 5px;
	cursor: pointer; 
}

/*.button-wrapper:hover{
	width: 100%;
	height: 100%;
	transform: scale(1.03);
  -webkit-transition: all 0.3s;

}*/
button:hover {
	transform: scale(1.03);
  -webkit-transition: all 0.3s;
}

textarea {
	resize: none;
}

